aggiunta proportion e sistemato il codice